# dax_obscore

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  build_docs.yaml  do_not_merge.yaml  formatting.yaml  mypy.yaml
configs/: ci_hsc_gen3.yaml  dc2.yaml  dp02.yaml  dp1.yaml  dp2.yaml  edp2.yaml  embargo-sia.yaml  example.yaml  prompt.yaml  usdf-embargo-live.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/changes/: DM-49669.config.rst  DM-51383.misc.rst  DM-51495.misc.rst  DM-51564.misc.rst  DM-53569.feature.rst  DM-54169.feature  DM-55279.api.rst  README.rst
doc/lsst.dax.obscore/: CHANGES.rst  index.rst
docs/superpowers/plans/: 2026-05-23-export-regions.md
docs/superpowers/specs/: 2026-05-23-export-regions-design.md
python/lsst/: __init__.py
python/lsst/dax/obscore/: __init__.py  config.py  obscore_exporter.py  plugins.py  siav2.py  tests.py
python/lsst/dax/obscore/cli/: _get_cli_subcommands.py  resources.yaml
python/lsst/dax/obscore/cli/cmd/: __init__.py  commands.py
python/lsst/dax/obscore/configs/: obscore_nominal.yaml
python/lsst/dax/obscore/script/: __init__.py  obscore_export.py  obscore_export_regions.py  obscore_set_exposure_regions.py  obscore_siav2.py  obscore_update_table.py
python/lsst/dax/obscore_generator/: combine_obscore_csv.py  gen_img_obscore.py
python/lsst/dax/obscore_generator/config/: gen_obscore_config.json
python/lsst/dax/obscore_generator/sql/: img.ObsCore.sql  ingest_img_obscore.sql
tests/: test_export_regions.py  test_exporter.py  test_import.py  test_siav2.py  test_where.py
tests/data/: hsc_gen3.yaml
tests/tmp7of_q054/: gen3.sqlite3
tests/tmpbk_3qduw/: gen3.sqlite3
tests/tmpi02n84h7/: gen3.sqlite3
tests/tmpmj5e_7jo/: gen3.sqlite3
tests/tmpn3ml3vis/: gen3.sqlite3
tests/tmpo0k8i9fc/: gen3.sqlite3
ups/: dax_obscore.table
