[metadata]
name = dax_obscore
description = Conversion of Butler datasets to ObsCore format.
author = Rubin Observatory Data Management
url = https://github.com/lsst-dm/dax_obscore
classifiers =
	Intended Audience :: Science/Research
	License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: lsst.dax.obscore.__version__

[options]
zip_safe = True
package_dir =
	=python
packages = find:
setup_requires =
	setuptools >=46.0
install_requires =
	lsst-daf-butler
	lsst-sphgeom
	pyarrow
	pyyaml >= 5.1
tests_require =
	pytest >= 3.2
	flake8 >= 3.7.5
	pytest-flake8 >= 1.0.4
	pytest-openfiles >= 0.5.0

[options.packages.find]
where = python

[options.package_data]
lsst.dax.obscore = py.typed

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203, N802, N803, N806, N812, N815, N816
exclude = __init__.py

[tool:pytest]
